<resources>
    <string name="app_name">Konverter</string>
    <string name="ihre_eingabe">Ihre Eingabe...</string>
    <string name="usd_eur"><![CDATA[USD -> EUR]]></string>
    <string name="eur_usd"><![CDATA[EUR -> USD]]></string>
    <string name="zoll_cm"><![CDATA[Zoll -> CM]]></string>
    <string name="cm_zoll"><![CDATA[CM -> ZOLL]]></string>
    <string name="ergebnis_n_a">Ergebnis: n/a</string>
    <string name="invalid_input">Ungültige Eingabe!</string>
    <string name="result">Ergebnis</string>
    <string name="reset">Reset</string>
</resources>
